# RenderX

./: .gitignore  CMakeLists.txt  README.md  Renderer.sln
Renderer/: Renderer.vcxproj  Renderer.vcxproj.filters
Shader/: Intersection.frag  Intersection.vert  NaiveIntersection.frag
cmp/: compare.cpp
help_tools/: Config.xml  generateConfig  generateConfig.cpp  generateConfig_cornell_box.cpp  run.py
include/: AlternativeBPTracer.h  BSDF.h  BidirectionalPathTracer.h  Camera.h  ConfigManager.h  CosineSphericalSampler.h  CountHashGrid.h  DiffuseBSDF.h  DiffuseMaterial.h  DistanceSampler.h  Fresnel.h  GlossyBSDF.h  GlossyMaterial.h  HGPhaseFunc.h  HGPhaseSampler.h  Hashgrid.h  HomoMediaDistSampler.h  IntersectionGPU.h  IptTracer.h  IsotropicPhaseFunc.h  IsotropicPhaseSampler.h  KDTree.h  LocalFrame.h  MCRenderer.h  Material.h  NewBidirectionalPathTracer.h  NoSelfIntersectionCondition.h  PathTracer.h  PathTracerTest.h  Photonmap.h  PointKDTree.h  RandGenerator.h  Ray.h  RefractiveMaterial.h  Renderer.h  Scene.h  SceneDiffuseObject.h  SceneEmissiveObject.h  SceneGlossyObject.h  SceneHeteroObject.h  (+21 more)
src/: AlternativeBPTracer.cpp  BidirectionalPathTracer.cpp  Camera.cpp  ConfigManager.cpp  DiffuseMaterial.cpp  GlossyMaterial.cpp  IntersectionGPU.cpp  IptTracer.cpp  KDTree.cpp  MCRenderer.cpp  Material.cpp  NewBidirectionalPathTracer.cpp  NoSelfIntersectionCondition.cpp  PathTracer.cpp  PathTracerTest.cpp  Photonmap.cpp  RandGenerator.cpp  RefractiveMaterial.cpp  Renderer.cpp  Scene.cpp  SceneDiffuseObject.cpp  SceneEmissiveObject.cpp  SceneGlossyObject.cpp  SceneHeteroObject.cpp  SceneHeterogeneousVolume.cpp  SceneObject.cpp  (+16 more)
(+2 files in other folders)
